# NeuralHedge

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  Store  data_hedge.ipynb  deepefficienthedge.html  deepefficienthedge.ipynb  deephedge.ipynb  deepmanage.ipynb  example_blackscholes.py  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.ipynb  tox.ini
.doctrees/: environment.pickle  examples.doctree  index.doctree
.doctrees/api/: modules.doctree  neuralhedge.data.doctree  neuralhedge.doctree  neuralhedge.nn.doctree  neuralhedge.utils.doctree
.github/workflows/: documentation.yaml  sphinx.yaml
_sources/api/: neuralhedge.data.rst.txt  neuralhedge.utils.rst.txt
api/: modules.html  neuralhedge.html  neuralhedge.nn.html  neuralhedge.utils.html
doc/: conf.py
doc/_build/doctrees/: environment.pickle  (+6 more)
docs/: Makefile  examples.rst  test_path.py
docs/api/: modules.rst  neuralhedge.rst
examples/: test_bs_efficient_hedge.py  test_bs_manager.py
neuralhedge/: autogreek.py
neuralhedge/_utils/: plotting.py
neuralhedge/data/: base.py  market.py  markets.py  stochastic.py
neuralhedge/dynamic/: stochastic.py
neuralhedge/market/: markets.py  stochastic.py
neuralhedge/nn/: blackschole.py  contigent.py  datahedger.py  datamanager.py  experiments.py  functional.py  loss.py  mlp.py
notebooks/: deepefficienthedge.ipynb  deephedge.ipynb  deepmanage.ipynb  efficienthedge.ipynb  logutility.ipynb  mean_variance.ipynb  model.pth
requirements/: dev_requirements.in  dev_requirements.txt
test/: test_functional.py
tests/: test_bs_efficient_hedge.py  test_bs_hedge.py  test_data.py  test_nn.py  test_old  test_utils.py
(+160 files in other folders)
