[tool.poetry]
name = "datahedge"
version = "0.1.0"
description = ""
authors = ["justinhou@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.0"
jupyter = "^1.0.0"
notebook = "^7.0.6"
torch = "^2.1.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
